crates/uitest/fixtures/ty/def/duplicated_arg_name.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/duplicated_arg_name.fe
---
error[3-0008]: duplicate argument name in function `foo`
  ┌─ duplicated_arg_name.fe:1:12
  │
1 │ pub fn foo(x: i32, x: u64) {}
  │            ^       - `x` is redefined here
  │            │
  │            `x` is defined here

error[3-0008]: duplicate argument name in function `foo`
  ┌─ duplicated_arg_name.fe:4:12
  │
4 │     fn foo(y: i32, y: i32) {}
  │            ^       - `y` is redefined here
  │            │
  │            `y` is defined here

error[3-0008]: duplicate argument name in function `foo`
  ┌─ duplicated_arg_name.fe:8:12
  │
8 │     fn foo(y: i32, y: i32) {}
  │            ^       - `y` is redefined here
  │            │
  │            `y` is defined here
